# Freshman

./: .gitignore  Readme.md  Todo.md  arguably.nix  flake.nix  pyproject.toml  requirements.txt
freshman/: __main__.py  algorithms.py  env.py  graphics.py  log.py
freshman_old/: __main__.py  algorithms.py
logs/: log
rl/: __init__.py  __main__.py  algorithms.py  env.py  log.py
