[tool.poetry]
name = "freshman"
version = "0.1.0"
description = ""
authors = ["dimchee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arguably = "^1.2.5"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
matplotlib = "^3.8.2"
numpy = "^1.26.4"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
